app/static/css/style.css
:root {
    --primary-blue: #006983;
    --primary-blue-dark: #104f5f;
    --secondary-dark-grey: #2F2F2F;
    --btn-orange: #A33F1F;
}

body, html {
    box-sizing: border-box;
    margin: 0;
}

body {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    height: 100vh;
}

#main-container {
    display: flex;
    flex-direction: column;
    height: 100%;
}

header {
    display: flex;
    flex-direction: column;
}

header > hr {
    border: none;
    border-bottom: 1px solid lightgrey;
    margin: 0;
}

#header-top {
    width: 100%;
    max-width: 1000px;
    /* flex-grow: 1; */
    margin: 0 auto;
    display: flex;
}

#header-top-content {
    display: flex;
    flex-direction: row;
    margin-left: auto;
    gap: 12px;
    align-items: center;
    padding: 6px;
}

#header-top-content > a {
    color: black;
    text-decoration: none;
    font-size: 11px;
}

#header-socials {
    display: flex;
    flex-direction: row;
    margin-left: auto;
    gap: 8px;
}

.header-social-link {
    background-color: var(--primary-blue);
    color: white;
    text-decoration: none;
    border-radius: 50%;
    font-size: 12px;
    display: flex;
    width: 24px;
    height: 24px;
}

.header-social-link > i {
    margin: auto;
}

#header-bottom {
    display: flex;
    flex-direction: row;
    gap: 40px;
    width: 100%;
    max-width: 1000px;
    /* flex-grow: 1; */
    margin: 20px auto;
}

#header-bottom > img {
    width: 140px;
}

#header-bottom-content {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    flex-grow: 1;
}

#header-nav {
    display: flex;
    flex-direction: row;
    gap: 20px;
    justify-content: space-between;
    align-items: center;
}

#header-nav > a {
    color: black;
    text-decoration: none;
}

#header-band {
    height: 40px;
    background-color: var(--primary-blue);
    flex-shrink: 0;
}

#gap-container {
    max-width: 1000px;
    margin: 0 auto;
    width: 100%;
    margin-bottom: 20px;
    display: flex;
    flex-direction: column;
    flex-grow: 1;
}

#top-nav {
    margin-top: 12px;
    border-top: 2px solid var(--primary-blue);
    border-bottom: 2px solid var(--primary-blue);
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

a {
    color: var(--primary-blue);
}

.top-nav-item {
    padding: 8px 12px;
    color: black;
    text-decoration: none;
    font-weight: bold;
    text-align: center;
    transition: background-color 0.2s ease, color 0.2s ease;
    /* even width children */
    flex-basis: 0;
    flex-grow: 1;
}

.top-nav-item:hover, .top-nav-item.active:hover  {
    background-color: var(--primary-blue);
    color: white;
}

.top-nav-item.active {
    font-weight: bold;
    color: var(--primary-blue);
}

h1, h2, h3, h4, h5, h6 {
    font-weight: 400;
}

h1 {
    margin: 16px 0px;
}

h2 {
    margin: 14px 0px;
}

h3 {
    margin: 12px 0px;
}

h4 {
    margin: 10px 0px;
    font-size: 18px;
}

#contents {
    display: flex;
    flex-direction: row;
    flex-grow: 1;
    gap: 12px;
    padding: 12px;
}

#maincontent {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
}

#altprofiles {
    width: 25%;
    margin-top: 54px;
    flex-shrink: 0;
}

footer {
    background-color: var(--secondary-dark-grey);
    color: white;
    margin-top: auto;
    display: flex;
    flex-direction: column;
}

#footer-top {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    gap: 12px;
    width: 100%;
    max-width: 1000px;
    margin: 0 auto;
    padding: 16px 0;
}

.footer-content-col {
    /* even width children */
    flex-basis: 0;
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    gap: 16px;
}

.footer-content-col > h5 {
    text-transform: uppercase;
    font-size: 12px;
    font-weight: 700;
}

.footer-content-col > a {
    font-size: 12px;
    color: white;
    text-decoration: none;
}

a.footer-social-link {
    background-color: white;
    color: var(--secondary-dark-grey);
    text-decoration: none;
    border-radius: 50%;
    font-size: 16px;
    display: flex;
    width: 30px;
    height: 30px;
}

a.footer-social-link > i {
    margin: auto;
}

footer address {
    font-size: 12px;
    font-style: normal;
    line-height: 1.6;
}

.contact-us-btn {
    display: flex;
    background-color: var(--primary-blue);
    color: white;
    text-decoration: none;
    padding: 20px 24px;
    align-items: center;
    justify-content: space-between;
    transition: background-color 0.2s ease;
}

.contact-us-btn:hover {
    background-color: var(--btn-orange);
}

footer > hr {
    border-top: 1px solid white;
    margin: 20px 0;
}

#footer-bottom {
    display: flex;
    flex-direction: column;
    font-size: 12px;
    gap: 16px;
    width: 100%;
    max-width: 1000px;
    margin: 0 auto 20px auto;
    padding: 16px 0;
}

#footer-bottom-links {
    display: flex;
    flex-direction: row;
    gap: 12px;
}

#footer-bottom-links > a {
    color: white;
    text-decoration: none;
}

.tooltip {
    text-decoration-line: underline;
    text-decoration-style: dotted;
}

.tooltip:hover {
    cursor: help;
}

.tooltip .tooltiptext {
    visibility: hidden;
    width: 250px;
    text-align: center;
    padding: 8px;
    border-radius: 6px;
    /* border: solid 1px black; */
    background-color: var(--primary-blue);
    color: white;
    font-weight: normal;
    position: absolute;
    z-index: 1;
    cursor: unset;
    /* margin-left: 8px; */
    font-size: 0.9rem;
}

.tooltip:hover .tooltiptext {
    visibility: visible;
}

.tooltip .tooltiptext a {
    color: white;
}

ul {
    margin: 0;
    line-height: 1.4;
}

dl > dt, dl > dd {
    padding: 6px;
}

dl > dt {
    font-weight: bold;
}

table.layout {
    font-size: 0.9rem;
}

table.layout th {
    font-weight: bold;
}

table.layout th, table.layout td {
    padding: 6px;
}

table.lined {
    border-collapse:collapse;
    margin-bottom: 10px;
}

table.lined td {
    border: solid 1px lightgrey;
    border-collapse:collapse;
    padding:5px;
}

.features-list {
    margin-bottom: 12px;
}

/* pagination */
.pagination {
    margin-top: auto;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.pagination-btn {
    background-color: white;
    color: var(--primary-blue);
    cursor: pointer;
    border-radius: 0;
    border: 1px solid var(--primary-blue);
    width: 30px;
    height: 30px;
    font-size: 14px;

    transition: background-color 0.2s ease, color 0.2s ease;
}

.pagination-btn > i {
    font-size: 12px;
}

.pagination-btn:disabled, .pagination-btn:disabled:hover {
    cursor: unset;
    background-color: lightgrey;
    color: white;
}

.pagination-btn.current-page, .pagination-btn.current-page:hover {
    background-color: var(--primary-blue-dark);
    color: white;
}

.pagination-btn:hover {
    background-color: var(--primary-blue);
    color: white;
}

.pagination > .pagination-btn:first-child {
    border-top-left-radius: 6px;
    border-bottom-left-radius: 6px;
}

.pagination > .pagination-btn:last-child {
    border-top-right-radius: 6px;
    border-bottom-right-radius: 6px;
}

.pagination > .pagination-btn:not(:last-child) {
    border-right: none;
}

/* map */
#map {
    height: 500px;
    margin-bottom: 20px;
}

